# act-net

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
act_net/: CMakeLists.txt  package.xml
act_net/include/act_net/: Controller.hpp
act_net/src/: Controller.cpp
act_net_ctrl/: CMakeLists.txt  package.xml  robot_control_plugin.xml
act_net_ctrl/config/: console.conf  gains.xml  lpc.yaml  sim.yaml
act_net_ctrl/include/act_net_ctrl/: Controller.hpp
act_net_ctrl/launch/: lpc.launch  sim.launch
act_net_ctrl/parameters/: agent.yaml  mean.txt  var.txt
act_net_ctrl/src/: Controller.cpp  robot_control_plugin.cpp
include/act-net/: Controller.hpp
include/act-net-vanilla/: Controller.hpp
include/primis/: Controller.hpp
primis/: CMakeLists.txt  package.xml
primis/include/primis/: Controller.hpp
primis/src/: Controller.cpp
primis_ros/: CMakeLists.txt  package.xml  robot_control_plugin.xml
primis_ros/config/: gains.xml  lpc.yaml  sim.yaml
primis_ros/include/primis_ros/: Controller.hpp
primis_ros/launch/: lpc.launch  sim.launch
primis_ros/parameters/: agent.yaml  policy.txt
primis_ros/parameters/old/: mean.txt  policy.txt  var.txt
primis_ros/src/: Controller.cpp  robot_control_plugin.cpp
rsc/parameters/: mean20000.txt  var20000.txt
rsc/parameters/actuation/: gru.txt  mlp.txt
rsc/parameters/old/: full_20000_policy.txt
src/: Controller.cpp
test/: env.cpp
test/include/: Actuation.hpp
