<?xml version="1.0"?>
<package format="2">
    <name>primis</name>
    <version>0.0.1</version>
    <description>End to end RL controller trained using an actuator network</description>
    <maintainer email="romahoney@robots.ox.ac.uk">Reece O'Mahoney</maintainer>
    <license>Proprietary</license>
    <buildtool_depend>catkin</buildtool_depend>
</package>